# dan-lab-to-nwb

./: .pre-commit-config.yaml  README.md  make_env.yml  pyproject.toml
.github/workflows/: test-install.yml
download_utils/: data.json  download_valid_sessions.sh  validate_paths.py  validation_report.json
src/dan_lab_to_nwb/: dan_lab_to_nwb_notes.md
src/dan_lab_to_nwb/download_utils/: download_valid_sessions.sh  reorganize_data.py  unorganize_data.py  validate_paths.py  validation_report.json
src/dan_lab_to_nwb/huang_2025/: __init__.py  behaviorinterface.py  convert_all_sessions.py  convert_session.py  huang_2025_behavior_interface.py  huang_2025_convert_session.py  huang_2025_metadata.yaml  huang_2025_notes.md  huang_2025_nwbconverter.py  huang_2025_optogenetic_interface.py  huang_2025_tdt_recording_interface.py  metadata.yaml  nwbconverter.py
src/dan_lab_to_nwb/huang_2025_001617/: __init__.py  huang_2025_001617_convert_all_sessions.py  huang_2025_001617_convert_session.py  huang_2025_001617_metadata.yaml  huang_2025_001617_nwbconverter.py  huang_2025_001617_optogenetic_interface.py  huang_2025_001617_recording_interface.py  huang_2025_tdt_convert_all_sessions.py  huang_2025_tdt_recording_interface.py
src/dan_lab_to_nwb/huang_2025_001711/: __init__.py  huang_2025_001711_behavior_interface.py  huang_2025_001711_convert_all_sessions.py  huang_2025_001711_convert_session.py  huang_2025_001711_ecephys_mat_interface.py  huang_2025_001711_metadata.yaml  huang_2025_001711_nwbconverter.py  huang_2025_dlc_convert_all_sessions.py  huang_2025_dlc_convert_session.py
src/dan_lab_to_nwb/huang_2025_dlc/: __init__.py  huang_2025_dlc_behavior_interface.py  huang_2025_dlc_convert_all_sessions.py  (+4 more)
(+10 files in other folders)
